--- a/package.json
+++ b/package.json
@@ -1,24 +1,74 @@
 {
+  "homepage": "https://github.com/Clementkouton/coffee-app",
+
   "name": "coffee-app",
+  
   "version": "0.1.0",
+  
   "private": true,
+  
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  
+    
+  "dev": "next dev",
+  
+    
+  "build": "next build",
+  
+    
+  "start": "next start",
+  
+    
+  "lint": "next lint",
+   
+  "deploy": "gh-pages -d build"
+  
   },
+  
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+  
+    
+  "firebase": "^10.13.0",
+  
+    
+  "next": "14.2.5",
+  
+    
+  "react": "^18",
+  
+    
+  "react-dom": "^18",
+  
+    
+  "react-icons": "^5.3.0",
+  
+    
+  "react-toastify": "^10.0.5"
+  
   },
+  
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+  
+    
+  "@types/node": "^20",
+  
+    
+  "@types/react": "^18",
+  
+    
+  "@types/react-dom": "^18",
+  
+    
+  "gh-pages": "^6.1.1",
+  
+    
+  "postcss": "^8",
+  
+    
+  "tailwindcss": "^3.4.1",
+  
+    
+  "typescript": "^5"
+  
   }
 }
